--- a/src/Views/Article_edit.twig
+++ b/src/Views/Article_edit.twig
@@ -12,7 +12,7 @@
   <p><input type="text"    name="title"         value="{{ article.title }}" id="defaultContactFormName" class="form-control mb-4" placeholder="Titre" required></p>
   <p><input type="text"    name="slug"          value="{{ article.slug }}" id="defaultContactFormName" class="form-control mb-4" placeholder="Slug" required></p>
   <p><input type="text"    name="content"       value="{{ article.content }}" id="defaultContactFormName" class="form-control mb-4" placeholder="content" required></p>
-  <p><input type="text"    name="url_images"    value="{{ article.url_images }}" id="defaultContactFormName" class="form-control mb-4" placeholder="copier l'url de l'image"></p>
+  <p><input type="text"    name="url_images"    value="{{ article.url_images }}" id="defaultContactFormName" class="form-control mb-4" placeholder="	https://cdn.pixabay.com/photo/2018/10/09/00/21/netflix-3733812__340.jpg"></p>
   <p><input type="hidden"  name="update_article" value="{{ article.update_article }}" id="defaultContactFormName" class="form-control mb-4"></p>
   <p><input type="text"    name="posted"        value="{{ article.posted }}" id="defaultContactFormName" class="form-control mb-4"></p>
      
