--- a/src/Views/admin/admin_index.twig
+++ b/src/Views/admin/admin_index.twig
@@ -30,7 +30,6 @@
               <a href="#" id="{{ comment.id }}"></a>
               <a href="comments/validateComment/{{comment.id}}" onclick="return window.confirm('Validation du commentaire !')" id="{{ comment.id }}" class="btn btn-success btn-sm">valider</button></a>
               <a href="comments/delete/{{comment.id}}" onclick="return window.confirm('Attention suppression definitive du commentaire !')" class="btn btn-danger btn-sm">Supprimer</button></a>
-              {# <a href="comments/update/{{comment.id}}" class="btn btn-primary btn-sm">Editer</button></a> #}
               </div>
             </div>
           </td>
@@ -58,8 +57,6 @@
         <th>id</th>
         <th>image</th>
         <th>titre</th>
-        {# <th>slug</th> #}
-        {# <th>content</th> #}
         <th>date creation</th>
         <th>Publier</th>
         <th>Date maj</th>
@@ -72,8 +69,6 @@
       <td>{{ article.id }}</td>
       <td><img id="img_blog_admin" src="{{ article.url_images }}" alt="..." ></td>
       <td>{{ article.title }}</td>
-      {# <td>{{ article.slug|slice(0, 55) }} ...</td> #}
-      {# <td>{{ article.content|slice(0, 55) }} ...</td> #}
       <td>{{ article.date_creation|date("d/m/y G:i:s") }}</td>
       <td>{{ article.posted }}</td>
       <td>{{ article.update_article }}</td>
@@ -98,7 +93,7 @@
 	<p><input type="text" name="title" value="" id="defaultContactFormName" class="form-control mb-4" placeholder="Titre" required></p>
 	<p><input type="text" name="slug" value="" id="defaultContactFormName" class="form-control mb-4" placeholder="Slug" required></p>
 	<p><input type="text" name="content" value="" id="defaultContactFormName" class="form-control mb-4" placeholder="Description" required></p>
-	<p><input type="text" name="url_images" value="" id="defaultContactFormName" class="form-control mb-4" placeholder="copier l'url de l'image"></p>
+	<p><input type="text" name="url_images" value="" id="defaultContactFormName" class="form-control mb-4" placeholder="copiez l'url de l'image	"></p>
 	<p><input type="submit" value="envoyer"></p>
 
 </form>
@@ -116,7 +111,6 @@
         <th>id</th>
         <th>pseudo</th>
         <th>email</th>
-        {# <th>mot de passe</th> #}
         <th>rôle</th>
         <th>Editer</th>
 				<th>supprimer</th>
@@ -128,7 +122,6 @@
        <td>{{ user.id }}</td>
        <td>{{ user.pseudo }}</td>
        <td>{{ user.email }}</td>
-       {# <td>{{ ' ... '~user.password|slice(0,20)~' ...'}}</td> #}
        <td>{{ user.role }}</td>
        <td>
 			<a href="users/update/{{user.id}}">
@@ -149,8 +142,6 @@
 {% block javascript %}
   <!-- Bootstrap core JavaScript -->
   <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
-  {# <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script> #}
-  {# <script src="https://code.jquery.com/jquery-1.12.4.js"></script> #}
   <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.1/popper.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.7/js/tether.min.js"></script>
