--- a/src/Views/home.twig
+++ b/src/Views/home.twig
@@ -5,15 +5,12 @@
   <div id="headerwrap">
     <div class="container-fluid">
       <div class="row centered">
-        <div class="col-lg-8 col-lg-offset-2">
+        <div class="col-lg-8 ">
         </div>
       </div>
-      <!-- row -->
     </div>
-    <!-- container -->
   </div>
-  <!-- headerwrap -->
-</div>
+</div> <!-- container -->
 {% endblock img_accueil %}
 
 {% block presentation %} 
