--- a/src/Views/Template/footer.twig
+++ b/src/Views/Template/footer.twig
@@ -21,4 +21,8 @@
     </div>
   </div>
 </div>
+{% block javascript %}
+  <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.4.1/js/bootstrap.bundle.min.js"></script>
+{% endblock %}
 <!-- Footer -->
