--- a/src/Views/inscription.twig
+++ b/src/Views/inscription.twig
@@ -24,7 +24,7 @@
 						<input type="email2" name="email2" class="form-control" placeholder="Confimed Email  *" value="{{ user.email2 }}"/>
 					</div>
 					<div class="form-group">
-						<input type="text" name="pseudo" class="form-control" placeholder="Your pseudo *" value="{{ user.pseudo }}"/>
+						<input type="text" name="pseudo" class="form-control" placeholder="Your pseudo * (without special character)" value="{{ user.pseudo }}"/>
 					</div>
 					<div class="form-group">
 						<input type="password" name="password" class="form-control" placeholder="Your Password *" value="{{ user.password }}"/>
